--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
-<!doctype <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <title>Manan Jhaveri - Noob</title>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Manan's Personal Website"/>
+    <meta name="keywords" content="manan jhaveri, android developer, android dev, iit ism dhanbad, manan"/>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"> 
+    <title>Manan Jhaveri - Amateur WebDev and AppDev</title>
+    <style>
+        #main-header{
+            text-align: center;
+            background-color: #000000;
+            color:ghostwhite;
+            padding: 2em;
+            font-size: 1.5em;
+            font-family: 'Montserrat', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        }
+    </style>
 </head>
 <body>
-    Hello World!
-
-    <a href="headfirst/starbuzz/index.html">Starbuzz Website</a>
+    <header id="main-header">
+        <h1>Hi! I am Manan Jhaveri.</h1>
+    </header>
 </body>
 </html>
